--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="preconnect" href="//cdn.jsdelivr.net" />
+    <link rel="dns-prefetch" href="//jsdelivr.net" />
+    <link rel="preconnect" href="//googletagmanager.com" />
+    <link rel="preconnect" href="//google.com" />
+    <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1'/>
+    <title>High Quality Translation | Translateka</title>
+    <meta name="description" content="Translateka | Translate whatever text you want in the highest quality">
+    <link rel="canonical" href="https://translateka.com/">
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="High Quality Translation | Translateka">
+    <meta property="og:description" content="Translateka | Translate whatever text you want in the highest quality">
+    <meta property="og:url" content="https://translateka.com/">
+    <meta property="og:site_name" content="Translateka">    
+    <link rel="icon" href="https://static.thenounproject.com/png/987-200.png" />
+    <link rel="shortcut icon" href="https://static.thenounproject.com/png/987-200.png">
+    <meta property="og:image:height" content="420">
+    <meta property="og:image:width" content="800">
+    <meta property="og:image:type" content="image/png" />
+    <meta itemprop="url" content="https://translateka.com/">
+    <meta itemprop="name" content="High Quality Translation | Translateka">
+    <meta itemprop="alternateName" content="High Quality Translation | Translateka">
+    <meta itemprop="description" content="High Quality Translation | Translateka">
+    <meta name="author" content="Translateka" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="theme-color" content="#000000" />
     <meta
